--- a/_site.yml
+++ b/_site.yml
@@ -7,14 +7,14 @@ description: |
 output_dir: "public_build"
 exclude: ["rdata", "public", "public_build", "tables", "working"]
 creative_commons: CC BY
-#favicon: assets/favicon.ico
+favicon: assets/favicon.ico
 navbar:
-  logo:
-    image: assets/icon.png
+  #logo:
+    #image: assets/icon.png
     #text: "bocasbiome"
-    href: index.html
+    #href: index.html
   source_url: false
-  search: true
+  search: false
   left:
     - icon: fa-home
       href: index.html
